--- a/musik.html
+++ b/musik.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body><font color="blue" size="100px">
-<p >vishal mishra<p> </font>
+<body>
+    <h1>ROCK YOU</h1>
 </body>
 </html>
